# niko-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
cmd/niko/: main.go
internal/cli/: app.go  interactive.go  spinner.go
internal/config/: config.go  defaults.go
internal/executor/: parser.go  runner.go  safety.go
internal/llm/: claude.go  deepseek.go  grok.go  local.go  ollama_manager.go  openai.go  provider.go
internal/prompt/: context.go  templates.go
scripts/: install.ps1  install.sh  shell-integration.sh
src/: chunker.rs  config.rs  main.rs  prompt.rs  safety.rs  ui.rs
src/llm/: claude.rs  mod.rs  ollama.rs  openai_compat.rs
src/modes/: cmd.rs  explain.rs  mod.rs  settings.rs
src/tui/: actions.rs  app.rs  events.rs  mod.rs  ui.rs  workspace.rs
